# lattice-prog

./: Cargo.toml
src/: flash.rs  main.rs
